--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ html {
     height: 310px;
 }
 
-.fa-twitter .fa-facebook .fa-instagram{
+.fa-twitter .fa-facebook .fa-instagram .fa-pinterest{
     transition: color 1s;
 }
 
@@ -132,5 +132,11 @@ html {
 }
 
 .fa-instagram:hover{
-    color: rgb(59,0,123);
+   color: rgb(128,0,187);
+color: radial-gradient(circle, rgba(128,0,187,1) 0%, rgba(213,218,30,1) 23%);
+/*    color: rgb(59,0,123);*/
+}
+
+.fa-pinterest:hover{
+    color: red;
 }
