--- a/style.css
+++ b/style.css
@@ -174,9 +174,10 @@ color: radial-gradient(circle, rgba(128,0,187,1) 0%, rgba(213,218,30,1) 23%);
     padding-bottom: 1rem !important;
 }
 
-.section {
-    padding-top: 0;
-    padding-bottom: 0;
+. fa-color{
+    
 }
+
+
 
 
